# twitter-feels

./: .gitignore  CLAUDE.md  README.md  check-admin-users.js  check-emotions.js  check-gauge-config.cjs  check-gauges-api.cjs  check-testuser-tweets.cjs  check-user-data.js  claude-progress.txt  cookies.txt  debug-session.cjs  docker-compose.yml  get-feature-101.js  get-feature-13.js  get-feature-18.js  get-feature-19.cjs  get-feature-20.cjs  get-feature-21.js  get-feature-24.cjs  get-feature-25.cjs  get-feature-28.js  get-feature-29.cjs  get-feature-30.cjs  get-feature-31.cjs  get-feature-32.cjs  get-feature-33.cjs  get-feature-34.cjs  get-feature-35.js  get-feature-37.cjs  get-feature-38.cjs  get-feature-39.cjs  get-feature-41.cjs  get-feature-42.cjs  get-feature-43.cjs  get-feature-44.cjs  get-feature-45.cjs  get-feature-47.cjs  get-feature-48.cjs  get-feature-49.cjs  (+46 more)
.playwright-mcp/: feature188-notes.txt  invalid-config-malformed.json  invalid-config-missing-version.json  invalid-config-not-json.txt  original-config.json  test-import-config.json  test-import.js  test-restore.js  twitter-feels-config.json
backend/: check-db-tables.cjs  check-gauge-config.cjs  check-models.cjs  delete-model-for-test.cjs  enable-model.cjs  fix-anger-gauge-label.cjs  get-feature-19.cjs  get-feature-28.cjs  get-feature-29.cjs  get-feature-31.cjs  get-feature-33.cjs  get-feature-34.cjs  get-feature-35.cjs  get-feature-35.js  get-feature-37.cjs  get-feature-38.cjs  (+41 more)
crawler/: Cargo.toml
crawler/src/: config.rs  db.rs  error.rs  main.rs  models.rs  rate_limit.rs  twitter_api.rs
(+90 files in other folders)
